--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,8 +1,8 @@
 <section class="page-header">
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
-  <a href="MemoryKids/" class="btn">Home</a>
-  <a href="MemoryKids/about" class="btn">About</a>
-  <a href="MemoryKids/privacy_policy" class="btn">Privacy Policy</a>
-  <a href="MemoryKids/terms_and_conditions" class="btn">Terms and conditions</a>
+  <a href="/" class="btn">Home</a>
+  <a href="/about" class="btn">About</a>
+  <a href="/privacy_policy" class="btn">Privacy Policy</a>
+  <a href="/terms_and_conditions" class="btn">Terms and conditions</a>
 </section>
